--- a/Burger-Queen-Api-Client/src/Styles/Products.css
+++ b/Burger-Queen-Api-Client/src/Styles/Products.css
@@ -2,24 +2,18 @@ body {
     justify-items: center;
     flex-direction: column;
 }
-#root{
-    height: 100%;
-}
-main{
-        background-color: #FFF6DE;
-        width: 100vw;
-        min-height: 100vh;
-        flex-grow: 1; 
-        /* display: flex;  */
-  /* justify-content: center;  */
-  /* align-items: center;  */
 
+main {
+    background-color: #fff6de;
+    width: 100vw;
+    min-height: 100vh;
+    flex-grow: 1;
 }
 
-/* .logo{
-    width: 80px;
-    height:450px;
-} */
+.logo {
+    height: 80px;
+}
+
 header {
     display: flex;
     justify-content: center;
@@ -32,11 +26,11 @@ header h1 {
     font-family: "Tilt Warp";
     letter-spacing: 6px;
     margin: 0;
-    color: #3A3A3A;
+    color: #3a3a3a;
 }
 
 h2 {
-    color: #D92202;
+    color: #d92202;
     margin: 0;
     font-family: "McLaren";
     font-weight: 5000;
@@ -69,11 +63,11 @@ h2 {
 }
 
 .buttonBreakfast {
-    background-color: #FF5349;
+    background-color: #ff5349;
 }
 
 .buttonDinner {
-    background-color: #FFAD09;
+    background-color: #ffad09;
 }
 
 .buttonBreakfast,
@@ -88,9 +82,9 @@ h2 {
 }
 
 .buttonNext {
-    color: #F9544B;
-    background-color: #FFD802;
-    border-color: #B62046;
+    color: #f9544b;
+    background-color: #ffd802;
+    border-color: #b62046;
     border-radius: 20px;
     padding: 8px 30px;
     font-family: "Cabin";
@@ -101,10 +95,10 @@ h2 {
 
 .product-card {
     width: 160px;
-    border-color: #3A3A3A;
+    border-color: #3a3a3a;
     border-style: solid;
     border-radius: 15px;
-    padding: 20px 10px;
+    padding: 10px;
     background-color: white;
     font-family: "Afacad";
     font-size: 18px;
@@ -119,25 +113,23 @@ h2 {
     margin: 10px;
     /* border-color: #3A3A3A;
     border-style: solid; */
-
 }
 
 .buttonsShop {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    font-weight: 900;
+    font-size: 25px;
 }
 
 .buttonAmount {
-    background-color: #FFE7A9;
+    background-color: #ffe7a9;
 }
 
 .buttonMore,
 .buttonLess {
-    background-color: #FFD800;
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
+    background-color: #ffd800;
 }
 
 .buttonsShop div {
@@ -148,12 +140,13 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 .product-list {
     display: flex;
     flex-wrap: wrap;
-    justify-content:center;
+    justify-content: center;
     gap: 20px;
     padding: 20px;
 }
